# feedbin-reader

./: .codeclimate.yml  .env  .gitignore  Cargo.toml  Makefile  README.md
feedbin-api-client/: Cargo.toml
feedbin-api-client/src/: lib.rs
migrations/20170326210624_add_subscriptions/: down.sql  up.sql
src/: etag.rs  lib.rs  main.rs  subscription.rs  subscriptions.rs  user.rs
