[package]
name = "feedbin-reader"
version = "0.1.0"
authors = ["Max Jacobson <max@hardscrabble.net>"]

[dependencies]
error-chain = "0.10.0"
# TODO: remove hyper stuff once it's not needed...
hyper = "0.10.5"
hyper-native-tls = "0.2.2"
feedbin-api-client = { path = "./feedbin-api-client" }
serde = "0.9"
serde_derive = "0.9"
serde_json = "0.9"
rustyline = "1.0.0"
toml = "0.3.1"
xdg = "2.1.0"
