[package]
name = "feedbin-reader"
version = "0.1.0"
authors = ["Max Jacobson <max@hardscrabble.net>"]

[dependencies]
diesel = { version = "0.12.0", features = ["sqlite"] }
diesel_codegen = { version = "0.12.0", features = ["sqlite"] }
dotenv = "0.8"
error-chain = "0.11.0-rc.2"
feedbin-api-client = { path = "./feedbin-api-client" }
rustyline = "1.0.0"
serde = "0.9"
serde_derive = "0.9"
toml = "0.3.1"
xdg = "2.1.0"
